Bug 575051 - [17] null, any pattern and corresponding initialization
Change-Id: Id8666dc24eca46879766108613513359fd13db8d
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>
Reviewed-on: https://git.eclipse.org/r/c/jdt/eclipse.jdt.core/+/184296
Tested-by: JDT Bot <jdt-bot@eclipse.org>